Data image type Fix
The first part of the data of the image was missng, fixed

--- a/dialog.html
+++ b/dialog.html
@@ -1,6 +1,6 @@
 <div class="getpage-dialog modal">
     <div class="modal-header">
-        <h1 class="dialog-title">Choose an image to copy</h1>
+        <h1 class="dialog-title">Choose an image to convert</h1>
     </div>
     <div class="modal-body">
         <div class="settings-list">
@@ -9,6 +9,6 @@
     </div>
     <div class="modal-footer">
         <a href="#" class="dialog-button btn left" data-button-id="cancel">Nope, I'm not sure</a>
-        <a href="#" class="dialog-button-ext btn primary" data-button-id="ok">Copy it !</a>
+        <a href="#" class="dialog-button-ext btn primary" data-button-id="ok">Convert it !</a>
     </div>
 </div>
