Fix infinite append Bug

--- a/dialog.html
+++ b/dialog.html
@@ -1,14 +1,17 @@
 <div class="getpage-dialog modal">
     <div class="modal-header">
+        <a href="#" class="close">&times;</a>
         <h1 class="dialog-title">Choose an image to convert</h1>
     </div>
     <div class="modal-body">
         <div class="settings-list">
             Enter a URL:  <input class="get-url" placeholder="http://" type="text" />
         </div>
+        <div class='dialog-message data-show'>
+
+        </div>
     </div>
     <div class="modal-footer">
-        <a href="#" class="dialog-button btn left" data-button-id="cancel">Nope, I'm not sure</a>
         <a href="#" class="dialog-button-ext btn primary" data-button-id="ok">Convert it !</a>
     </div>
 </div>
