--- a/dialog.html
+++ b/dialog.html
@@ -1,14 +1,14 @@
-<div class="getpage-dialog modal">
+<div class="getpage-dialog modal ImageToData">
     <div class="modal-header">
         <a href="#" class="close">&times;</a>
-        <h1 class="dialog-title">Choose an image to convert</h1>
+        <h1 class="dialog-title">Choose an image to convert into data</h1>
     </div>
     <div class="modal-body">
         <div class="settings-list">
-            Enter a URL:  <input class="get-url" placeholder="http://" type="text" />
+            Enter a URL:  <input class="get-url" placeholder="http://" type="text" required>
+			<div class="loading"></div>
         </div>
         <div class='dialog-message data-show'>
-
         </div>
     </div>
     <div class="modal-footer">
