Fixing dialog size issue

--- a/html/itd-dialog.html
+++ b/html/itd-dialog.html
@@ -8,7 +8,7 @@
             Enter a URL:  <input class="get-url" placeholder="http://" type="text" required>
 			<div class="loading"></div>
         </div>
-        <div class='dialog-message data-show'>
+        <div class="data-show settings-list">
         </div>
     </div>
     <div class="modal-footer">
