--- a/html/itd-dialog.html
+++ b/html/itd-dialog.html
@@ -1,17 +1,17 @@
 <div class="getpage-dialog modal ImageToData">
     <div class="modal-header">
         <a href="#" class="close">&times;</a>
-        <h1 class="dialog-title">Choose an image to convert into data</h1>
+        <h1 class="dialog-title">{{DIALOG_TITLE}}</h1>
     </div>
     <div class="modal-body">
         <div class="settings-list">
-            Enter a URL:  <input class="get-url" placeholder="http://" type="text" required>
+			{{ENTER_URL}} : <input class="get-url" placeholder="http://" type="text" required>
 			<div class="loading"></div>
         </div>
         <div class="data-show settings-list">
         </div>
     </div>
     <div class="modal-footer">
-        <a href="#" class="dialog-button-ext btn primary" data-button-id="ok">Convert it !</a>
+        <a href="#" class="dialog-button-ext btn primary" data-button-id="ok">{{DIALOG_OK}}</a>
     </div>
 </div>
