--- a/html/itd-dialog.html
+++ b/html/itd-dialog.html
@@ -1,6 +1,6 @@
 <div class="getpage-dialog modal ImageToData">
     <div class="modal-header">
-        <a href="#" class="close">&times;</a>
+        <a href="#" class="close dialog-button " data-button-id="close">&times;</a>
         <h1 class="dialog-title">{{DIALOG_TITLE}}</h1>
     </div>
     <div class="modal-body">
