fixing image types

--- a/html/itd-dialog.html
+++ b/html/itd-dialog.html
@@ -14,7 +14,7 @@
             
             <span class="btn btn-default btn-file">
                 {{BROWSE}}
-                <input class="get-local" name="get-local" type="file" accept="image/png, image/jpg, image/gif">
+                <input class="get-local" name="get-local" type="file" accept="image/png, image/jpg, image/jpeg, image/gif">
             </span>
             <label for="get-local" class="label label-info">{{NO_SELECT}}</label>
             
